2.4.102 -> 2.4.103:
	- need to create popt/configure during make archive
	- added comments about modifictation to base popt and rpmrc files
	- allow spaces in group names
	- fix bug in memory allocation of special doc stuff
	- Jeff Johnson's mode/dev fixes

2.4.101 -> 2.4.102:
	- fixed spelling of "instchangelog" in lib-rpmrc.in
	- fixed memory leak in headerSprintf() extension cache
	- fixed memory allocation for header formatting extension cache
	- added support for INSTPREFIX virtual tag for backwards compatibility
	- cpio error codes were poorly defined, causing bad error messages
	- generates INSTPREFIXES tag properly, and sets RPM_INSTALL_PREFIX
	  and RPM_INSTALL_PREFIXn environment variables
	- fixed memory leak in install code which occured when net shared paths
	  were used
	- don't pass net shared path to rpmInstallPackage() -- it looks 
	  directly in the rpmrc entries
	- don't remove files in netsharedpath, even for files whose states
	  are not net shared
	- changed --setugids to use separate chown and chgrp programs, for
	  better portability
	- popt moved to autoconf
	- Makefiles changed to allow building in a different directory then
	  the source code resides in
	- finally fixed the Build Host spacing in rpmpopt

2.4.100 -> 2.4.101:
	- handle files with spaces (put double quotes around them)
        - new rpmrc setting, buildshell, can be used to set shell
          used for build scripts (default is /bin/sh)
	- fix bug where macros were being improperly set for
	  Patch: and Source: lines
	- may use "instchangelog" in rpmrc to limit the maxmium number of 
	  changelog entries that are stored in the database for each package
	  (-1 means store all of them)
	- default instchangelog is set to 5
	- headerRemoveEntry() didn't free the item's data -- this led to
  	  a slight memory leak when installing packages
        - implemented generic file relocations at install time
          (use --relocate <oldpath>=<newpath>, i.e. --relocate /usr=/foo)